--- a/service.API/appsettings.json
+++ b/service.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=DesarrolloDB;User Id=sa;Password=MoviesDb@123;TrustServerCertificate=True;Encrypt=False;"
+  }
 }
